# bcase2-sales-forecasting

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_docker.txt  session_store.db  stats.json
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
data/01_raw/: German_GDP.csv  Test Answers.csv
docs/source/: conf.py  index.rst
src/bcase2_sales_forecasting/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/bcase2_sales_forecasting/pipelines/data_preprocessing/: __init__.py  nodes.py  pipeline.py  utils.py
src/bcase2_sales_forecasting/pipelines/p02_ingested/: nodes.py  pipeline.py  utils.py
src/bcase2_sales_forecasting/pipelines/p03_data_preprocessing/: nodes.py  pipeline.py  utils.py
src/bcase2_sales_forecasting/pipelines/p04_feature_selection/: nodes.py  pipeline.py  utils.py
src/bcase2_sales_forecasting/pipelines/p05_prepare_model_input_data/: nodes.py  pipeline.py
src/bcase2_sales_forecasting/pipelines/p05_split_train/: nodes.py  pipeline.py
src/bcase2_sales_forecasting/pipelines/p06_model_selection/: nodes.py  pipeline.py  utils.py
src/bcase2_sales_forecasting/pipelines/p07_model_train/: nodes.py  pipeline.py  utils.py
src/bcase2_sales_forecasting/pipelines/p08_model_predict/: nodes.py  pipeline.py  utils.py
src/bcase2_sales_forecasting/pipelines/p09_data_drift/: __init__.py  nodes.py  pipeline.py
src/bcase2_sales_forecasting/pipelines/raw_data_unit_tests/: nodes.py  pipeline.py  utils.py
tests/: test_ingestion.py  test_preprocessing.py  test_run.py
